[project]
name = "tunnelo"
version = "0.1.0"
description = ""
authors = [{ name = "Kacper Wardega", email = "kwardega@stellarcyber.ai" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["typer (>=0.15.2,<0.16.0)", "pyyaml (>=6.0.2,<7.0.0)"]

[project.scripts]
tunnelo = "tunnelo.main:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.400"
ruff = "^0.11.7"

